NMS-14006:Investigate and identify steps (JIRA issues) to support constraints based on multiple parameters in the rules engine